# resources/views/emails/contactSupport.blade.php
@@ -1,0 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Support</title>
+</head>
+<body>
+
+<h1>Support</h1>
+<p>Name: {{ $mailData['name'] }}</p>
+<p>last_name: {{ $mailData['last_name'] }}</p>
+<p>phone: {{ $mailData['phone'] }}</p>
+<p>Email: {{ $mailData['Email'] }}</p>
+<p>Message: {{ $mailData['Message'] }}</p>
+</body>
+</html>
